# ShapeWorks

./: .gitattributes  .gitignore  .gitmodules  404.html  BUILD.md  BUILD_Windows.md  BuildInstructions.txt  CMakeLists.txt  ChangeLog  Femur.md  FindPowerCrust.cmake  GettingStarted.md  INSTALL.md  LICENSE.txt  LeftAtrium.md  MacBuildInstructions.txt  Mac_README.txt  Makefile  MeshGenerator.cc  Optimize.md  PACKAGE_README.txt  Procrustes3D.cxx  README.md  README.mediawiki  ReadMe.txt  ShapeWorksLicense.txt  ShapeWorksRunApp.h  ShapeWorksRunApp.txx  Windows_README.txt  about  apt_installs.sh  backlog  bsuperbuild-linux.sh  build_dependencies.sh  build_fixes.txt  cmake_install.cmake  computeFunctions.h  conda_env_setup.bat  conda_env_setup.sh  conda_installs.bat  (+91 more)
Applications/shapeworks/: CMakeLists.txt  Command.cpp  Command.h  Commands.cpp  Commands.h  Executable.cpp  Executable.h  ImageCommands.cpp  MeshCommands.cpp  ParticleCommands.cpp  ParticleCommands.h  ParticleSystemCommands.cpp  SharedCommandData.h  main.cpp  notes.txt  shapeworks.cpp
Examples/C++/: CMakeLists.txt  HelloShapeWorksItk.cpp
ExternalLibs/PreViewMeshQC/: CMakeLists.txt
ExternalLibs/Procrustes/: CMakeLists.txt
ExternalLibs/tinyxml/: CMakeLists.txt
ExternalLibs/trimesh2/: CMakeLists.txt  Makerules
Libs/: CMakeLists.txt
Libs/Alignment/: ApplyRigid3DTransformationToImage.cxx  CMakeLists.txt  ICPRigid3DImageRegistration.cxx  Procrustes3D.cpp  Procrustes3D.h  ResampleVolumeToIsotropic.cxx  ResizeOriginResampleVolumes.cxx  TranslateImages.cxx  TranslateShapeToImageOrigin.cxx
Libs/Analyze/: Analyze.cpp  Analyze.h  CMakeLists.txt  LegacyMeshGenerator.cpp  LegacyMeshGenerator.h  MeshCache.cpp  MeshCache.h  MeshFromDT.cpp  MeshGenerator.cpp  MeshGenerator.h  MeshGroup.cpp  MeshGroup.h  MeshManager.cpp  MeshManager.h  MeshWorkQueue.cpp  MeshWorkQueue.h  MeshWorker.cpp  MeshWorker.h  ParticleArea.cpp  ParticleArea.h  Particles.cpp  Particles.h  QMeshWarper.cpp  QMeshWarper.h  Reconstruction.cpp  Reconstruction.h  Shape.cpp  Shape.h  ShapeCollection.cpp  ShapeCollection.h  StudioEnums.cpp  StudioEnums.h  StudioMesh.cpp  StudioMesh.h  SurfaceReconstructor.cpp  SurfaceReconstructor.h  Vis.cpp  Vis.h  itkParticleShapeStatistics.h
Libs/Application/: CMakeLists.txt  ShapeWorksVtkOutputWindow.h
Libs/Common/: CMakeLists.txt  Conversion.cpp  Exception.cpp  Exception.h  Logging.cpp  Logging.h  Profiling.cpp  Profiling.h  Region.cpp  Region.h  Shapeworks.cpp  Shapeworks.h  ShapeworksUtils.cpp  ShapeworksUtils.h
Libs/Groom/: CMakeLists.txt  Groom.cpp  Groom.h  GroomParameters.cpp  GroomParameters.h
Libs/ITKParticleSystem/: CMakeLists.txt  itkMaximumEntropyCorrespondenceSampler.h  itkMaximumEntropySurfaceSampler.h  itkMaximumEntropySurfaceSampler.txx  itkParticleConstrainedModifiedCotangentEntropyGradientFunction.h  itkParticleCurvatureEntropyGradientFunction.h  itkParticleDomain.h  itkParticleGeneralShapeGradientMatrix.h  itkParticleGeneralShapeMatrix.h  itkParticleGoodBadAssessment.h  itkParticleGoodBadAssessment.txx  itkParticleImageDomainWithGradients.h  itkParticleImplicitSurfaceDomain.h  itkParticleMeshBasedGeneralEntropyGradientFunction.h  itkParticleMeshBasedGeneralEntropyGradientFunction.txx  itkParticleOmegaGradientFunction.h  itkParticleProcrustesRegistration.cxx  itkParticleQualifierEntropyGradientFunction.h  itkParticleRegionNeighborhood.h  itkParticleSurfaceNeighborhood.txx  itkParticleSystem.h  itkParticleSystem.txx  itkPowerOfTwoPointTree.h  object_writer.txx
Libs/ITKVTK/: CMakeLists.txt  itkImageToVTKImageFilter.h  itkVTKImageToImageFilter.h  itkVTKImageToImageFilter.hxx
Libs/Image/: AntiAliasing.cxx  CMakeLists.txt  ClipVolume.cxx  CloseHoles.cxx  CropImages.cxx  ExtractGivenLabelImage.cxx  FastMarching.cxx  FindLargestBoundingBox.cxx  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  PadVolumeWithConstant.cxx  ReflectVolumes.cxx  ResampleVolumesToBeIsotropic.cxx  ThresholdImages.cxx  TopologyPreservingSmoothing.cxx  Transform.cpp  Transform.h  VectorImage.cpp  VectorImage.h  itkTPGACLevelSetImageFilter.h
Libs/Mesh/: BenchMeshFIM.cpp  CMakeLists.txt  ClipClosedSurface.cxx  ComputeCurvatureAndCoordFiles.cxx  ComputeGeodesicDistanceToCurve.cxx  ComputeGeodesicDistanceToLandmark.cxx  ComputeMeanNormals.cxx  ComputeMeshGeodesics.cxx  ComputeRasterizationVolumeOriginAndSize.cxx  ExtractVertexFeatureFromMesh.cxx  FFCMesh.cpp  FFCMesh.h  FixCuttingPlanes.cxx  GenerateBinaryAndDTImagesFromMeshes.cxx  GenerateFeatureGradientFiles.cxx  GenerateFidsFiles.cxx  GenerateFidsFilesFromMeshes.cxx  GetFeatureVolume.cxx  GroomFemur.cpp  LandmarkDrivenMeshWarping.cxx  Mesh.cpp  Mesh.h  MeshAssignThickness.cpp  MeshAssignThickness.h  MeshBase.h  MeshComputeThickness.cpp  MeshComputeThickness.h  MeshLandmarkGeodesics.cpp  MeshLandmarkGeodesics.h  MeshProjectParticles.cpp  MeshProjectParticles.h  MeshUtils.cpp  MeshUtils.h  MeshWarper.cpp  MeshWarper.h  ParticleBasedSurfaceReconstruction_InputParams.h  ProbeFeatureVolumesAtMeshVertices.cxx  ProbeNormals.cxx  ProjectPointsOntoMesh.cxx  ReconstructMeanSurface.cxx  (+16 more)
Libs/Optimize/: CMakeLists.txt  Constraint.cpp  Constraint.h  Constraints.cpp  Constraints.h  ContourDomain.cpp  CorrespondenceFunction.cpp  CorrespondenceFunction.h  CorrespondenceMode.h  CurvatureSamplingFunction.cpp  CurvatureSamplingFunction.h  DualVectorFunction.h  EarlyStoppingConfig.h  FreeFormConstraint.cpp  FreeFormConstraint.h  GenericContainerArray.h  GradientDescentOptimizer.cpp  GradientDescentOptimizer.h  GradientDescentOptimizer.txx  ImageDomainWithGradN.h  ImplicitSurfaceDomain.h  InvertibleNetwork.cpp  InvertibleNetwork.h  (+104 more)
ShapeWorksRun/: CMakeLists.txt  ShapeWorksRun.cxx  ShapeWorksRunApp.h  ShapeWorksRunApp.txx
Source/: CMakeLists.txt  ReadMe.txt
Studio/: CMakeLists.txt  LICENSE.txt  main.cpp
Testing/: CMakeLists.txt  TestConfiguration.h.in  Testing.cpp  Testing.h
VtkFltk/: CMakeLists.txt  fltkVTKImageViewer.txx  fltkVTKImageViewerBase.h
code/: CMakeLists.txt  FindPowerCrust.cmake
source/: CMakeLists.txt  ReadMe.txt
src/: CMakeLists.txt  Doxyfile.in  PrefixHeader.h  main.cc
(+18997 files in other folders)
